--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -6,6 +6,12 @@
   margin-right: 0;
 }
 
+.article * {
+  flex: 1;
+}
+
+.article
+
 .header {
   padding: 1.5rem 1rem 1rem;
   border-bottom: 1px solid #e6e6e6;
@@ -56,8 +62,15 @@
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 100%;
   padding: 3rem 1rem 0 1rem;
+}
+
+.content blockquote {
+  font-size: 22px;
 }
 
 .sidebar h2 {
