--- a/src/components/Image/index.module.css
+++ b/src/components/Image/index.module.css
@@ -17,3 +17,12 @@
   font-size: 12px;
   padding: 20px;
 }
+.figure {
+  padding: 0;
+  width: auto;
+  flex-direction: column;
+  display: flex;
+  object-fit: cover;
+  margin-left: 0;
+  margin-right: 0;
+}
