--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -49,11 +49,6 @@
     width: 100%;
     margin-bottom: 2.5rem;
   }
-
-  /* .sidebar {
-    width: 100%;
-    padding: 1.5rem;
-  } */
 }
 
 .content {
@@ -62,19 +57,20 @@
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
-  padding: 3rem 7rem 0 7rem;
+  padding: 1rem 3rem 2rem 3rem;
   border: 1px solid #e6e6e6;
   border-top: none;
+}
+
+@media (min-width: 62em) {
+  .content {
+    padding: 3rem 7rem 7rem 7rem;
+  }
 }
 
 .content blockquote {
   font-size: 22px;
 }
-
-/* .sidebar h2 {
-  font-weight: 900;
-  margin-bottom: 2rem;
-} */
 
 .metadata {
   display: flex;
